--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,19 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Jekyll Blog
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Blog Demo
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+
+# If you're hosting your site at a Project repository on GitHub pages
+# (http://yourusername.github.io/repository-name)
+# and NOT your User repository (http://yourusername.github.io)
+# then add in the baseurl here, like this: "/repository-name"
+baseurl: "/blog"
 
 #
 # Flags below are optional
