--- a/_config.yml
+++ b/_config.yml
@@ -8,15 +8,15 @@ name: Jekyll Blog
 # Short bio or description (displayed in the header)
 description: Blog Demo
 
-# Somehow this fixed the reason why my css was not rendering in deployed mode (production)
-baseurl: /
-url: https://cboswel1.github.io
-
-
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
 
-
+# If you're hosting your site at a Project repository on GitHub pages
+# (http://yourusername.github.io/repository-name)
+# and NOT your User repository (http://yourusername.github.io)
+# then add in the baseurl here, like this: "/repository-name"
+baseurl: "/jekyll-blog"
+url: http://cboswel1.github.io
 
 #
 # Flags below are optional
@@ -50,7 +50,11 @@ google_analytics:
 # Used for Sitemap.xml and your RSS feed
 url:
 
-
+# If you're hosting your site at a Project repository on GitHub pages
+# (http://yourusername.github.io/repository-name)
+# and NOT your User repository (http://yourusername.github.io)
+# then add in the baseurl here, like this: "/repository-name"
+baseurl: ""
 
 #
 # !! You don't need to change any of the configuration flags below !!
