--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/jekyll-blog"
+baseurl: /jekyll-blog/
 url: http://cboswel1.github.io
 
 #
