and and another

--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ name: Jekyll Blog
 # Short bio or description (displayed in the header)
 description: Blog Demo
 
-baseurl: /
-url: https://cboswel1.github.io
+baseurl: /jekyll-blog
+url: http://cboswel1.github.io
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
