--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ name: Jekyll Blog
 # Short bio or description (displayed in the header)
 description: Blog Demo
 
-baseurl: /jekyll-blog
+baseurl: /
 url: http://cboswel1.github.io
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
